Day2-hands-on/hf_backend/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugg-backend
  namespace: retrieval-system
  labels:
    app: hugg-backend
    component: backend

spec:
  type: ClusterIP

  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  
  selector:
    app: hugg-backend
